--- a/eWallet.Backend/eWallet.Backend/Views/Profile/CustomerProfile_ListProfile.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Profile/CustomerProfile_ListProfile.cshtml
@@ -1,11 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Search Transactions";
+    ViewBag.Title = "Customer Profile";
 }
-
+<div class="row">
+    <ul class="breadcrumb page-header">
+        <li><a href='@Url.Action("Index","Home",null,null)' class="glyphicons home"><i></i> Home</a></li>
+        <li><a href='#'>@ViewBag.Title</a></li>
+    </ul>
+</div>
 <style>
     .filterable {
         /*margin-top: 15px;*/
-        width:1170px;
+        width: 1170px;
     }
 
         .filterable .panel-heading .pull-right {
@@ -34,14 +39,6 @@
                 color: #333;
             }
 </style>
-
-
-<div class="row">
-    <ul class="breadcrumb page-header">
-        <li><a href='@Url.Action("Index","Home",null,null)' class="glyphicons home"><i></i> Home</a></li>
-        <li><a href='#'>@ViewBag.Title</a></li>
-    </ul>
-</div>
 <div>
     <div class="row">
         <div class="panel panel-primary filterable">
@@ -54,15 +51,12 @@
             <table class="table">
                 <thead>
                     <tr class="filters">
-                        <th><input id="_id" type="text" class="form-control" placeholder="#" disabled></th>
-                        <th><input id="system_created_time" type="text" class="form-control" placeholder="Created Time" disabled></th>
-                        <th><input id="profile" type="text" class="form-control" placeholder="Profile" disabled></th>
-                        <th><input id="type" type="text" class="form-control" placeholder="Type" disabled></th>
-                        <th><input id="channel" type="text" class="form-control" placeholder="Channel" disabled></th>
-                        <th><input id="service" type="text" class="form-control" placeholder="Service" disabled></th>
-                        <th><input id="provider" type="text" class="form-control" placeholder="Service Provider" disabled></th>
-                        <th><input id="payment_provider" type="text" class="form-control" placeholder="Payment Provider" disabled></th>
-                        <th><input id="status" type="text" class="form-control" placeholder="Status" disabled></th>
+                        <th><input id="_id" type="text" class="form-control" placeholder="id" disabled></th>
+                        <th><input id="user_name" type="text" class="form-control" placeholder="Tài khoản" disabled></th>
+                        <th><input id="full_name" type="text" class="form-control" placeholder="Họ Tên" disabled></th>
+                        <th><input id="mobile" type="text" class="form-control" placeholder="SDT" disabled></th>
+                        <th><input id="Personal_Id" type="text" class="form-control" placeholder="Số CMND" disabled></th>
+                        <th><input id="status" type="text" class="form-control" placeholder="Trạng thái" disabled></th>
                         <th><a href="#" id="SEARCH" class="form-control">Tìm</a></th>
                     </tr>
                 </thead>
@@ -70,26 +64,21 @@
         </div>
     </div>
 </div>
+<table class="table table-striped table-hover " style="font-size:14px; width:1090px;">
+    <tbody id="table_body"></tbody>
+</table>
 
-<div class="row">
-    <table class="table table-striped table-hover " style="width:1090px;font-size:14px; text-align:left;">
-        <tbody id="table_body"></tbody>
-    </table>
-
-    <ul class="pagination">
-        <li>Prev</li>
-        <li>Page #n</li>
-        <li>Page #n</li>
-        <li>Page #c</li>
-        <li>Page #n</li>
-        <li>Page #n</li>
-        <li>Page #n</li>
-        <li>Page #n</li>
-        <li>Next</li>
-    </ul>
-
-
-</div>
+<ul class="pagination">
+    <li>Prev</li>
+    <li>Page #n</li>
+    <li>Page #n</li>
+    <li>Page #c</li>
+    <li>Page #n</li>
+    <li>Page #n</li>
+    <li>Page #n</li>
+    <li>Page #n</li>
+    <li>Next</li>
+</ul>
 
 <script>
     $(document).ready(function () {
@@ -135,61 +124,59 @@
         });
     });
 </script>
+
 @*tim thong tin*@
 <script>
     $('#SEARCH').click(function () {
         //alert('Clicked');
-        $system_created_time = $('#system_created_time').val();
-        $profile = $('#profile').val();
-        $transaction_type = $('#type').val();
-        $channel = $('#channel').val();
-        $service = $('#service').val();
-        $provider = $('#provider').val();
-        $type = $('#type').val();
-        $payment_provider = $('#payment_provider').val();
+        $User_name = $('#user_name').val();
+        $Full_Name = $('#full_name').val();
+        $mobile = $('#mobile').val();
+        $Personal_Id = $('#Personal_Id').val();
         $status = $('#status').val();
         $_Id = $('#_id').val();
+
         var page;
 
-        $.ajax({
-            url: '@Url.Action("JsonResultT", "Transaction")',
-            contentType: 'application/json; charset=utf-8',
-            type: 'GET',
-            dataType: 'json',
-            data: { _id: $_Id, system_created_time: $system_created_time, profile: $profile, transaction_type: $transaction_type, channel: $channel, service: $service, provider: $provider, payment_provider: $payment_provider, type: $type, status: $status, page: page, page_size: 20 },
-            timeout: 30000
-        })
-           .success(function (result) {
-               if (page == 0) {
-                   $(".pagination").easyPaging(result.total, { // make 1337 elements navigatable
-                       perpage: 20, // show 10 elements per page
-                       lapping: 0, // don't overlap pages for the moment
-                       page: 1, // start at page, can also be "null" or negative
-                       onSelect: function (next_page) {
-                           loadPage(next_page);
-                       }
+            $.ajax({
+                url: '@Url.Action("JsonResult", "Profile")',
+                contentType: 'application/json; charset=utf-8',
+                type: 'GET',
+                dataType: 'json',
+                data: { _id: $_Id, user_name: $User_name, full_name: $Full_Name, personal_id: $Personal_Id, mobile: $mobile, status: $status, page: page, page_size: 20 },
+                timeout: 30000
+            })
+               .success(function (result) {
+                    if (page == 0) {
+                          $(".pagination").easyPaging(result.total, { // make 1337 elements navigatable
+                           perpage: 20, // show 10 elements per page
+                           lapping: 0, // don't overlap pages for the moment
+                           page: 1, // start at page, can also be "null" or negative
+                           onSelect: function (next_page) {
+                               loadPage(next_page);
+                           }
+                       });
+                   }
+                   $('#table_body').html('');
+                   $.each(result.list, function (i, val) {
+                       //noi chuoi
+                       var x = val._id.toString();
+                       var id2 = x.substring(0, 4) + "x" + x.substring(4);
+                       $strRow = "<tr>"
+                       + "<td><a href='ViewProfile/" + val._id + "'>" + id2+ "</a></td>"
+                       + "<td>" + val.user_name + "</td>"
+                       + "<td>" + val.full_name + "</td>"
+                       + "<td>" + val.mobile + "</td>"
+                       + "<td>" + val.personal_id + "</td>"
+                       + "<td>" + val.status + "</td>"
+                       + "</tr>";
+                       $('#table_body').append($strRow);
                    });
-               }
-               $('#table_body').html('');
-               $.each(result.list, function (i, val) {
-                   $strRow = "<tr>"
-                   + "<td><a href='Index/" + val._id + "'>" + val._id + "</a></td>"
-                   + "<td>" + val.system_created_time + "</td>"
-                   + "<td>" + val.created_by + "</td>"
-                   + "<td>" + val.transaction_type + "</td>"
-                   + "<td>" + val.channel + "</td>"
-                   + "<td>" + val.service + "</td>"
-                   + "<td>" + val.provider + "</td>"
-                   + "<td>" + val.payment_provider + "</td>"
-                   + "<td>" + val.status + "</td>"
-                   + "</tr>";
-                   $('#table_body').append($strRow);
+               })
+               .error(function (xhr, status) {
+                   NProgress.done();
+                   alert("Không thể load dữ liệu. Vui lòng thử lại sau!");
                });
-           })
-           .error(function (xhr, status) {
-               NProgress.done();
-               alert("Không thể load dữ liệu. Vui lòng thử lại sau!");
-           });
 
     })
 </script>
@@ -201,11 +188,11 @@
 
         function loadPage(page) {
             $.ajax({
-                url: '@Url.Action("JsonListTransactions", "Transaction")',
+                url: '@Url.Action("JsonListProfile", "Profile")',
                 contentType: 'application/json; charset=utf-8',
                 type: 'GET',
                 dataType: 'json',
-                data: { profile: null, status: '', created_date_from: null, created_date_to: null, page: page, page_size: 20 },
+                data: { id: null, status: '', page: page, page_size: 20 },
                 timeout: 30000
             })
                .success(function (result) {
@@ -221,15 +208,15 @@
                    }
                    $('#table_body').html('');
                    $.each(result.list, function (i, val) {
+                       //noi chuoi
+                       var x = val._id.toString();
+                       var id2 = x.substring(0, 4) + "x" + x.substring(4);
                        $strRow = "<tr>"
-                       + "<td><a href='Index/" + val._id + "'>" + val._id + "</a></td>"
-                       + "<td>" + val.system_created_time + "</td>"
-                       + "<td>" + val.created_by + "</td>"
-                       + "<td>" + val.transaction_type + "</td>"
-                       + "<td>" + val.channel + "</td>"
-                       + "<td>" + val.service + "</td>"
-                       + "<td>" + val.provider + "</td>"
-                       + "<td>" + val.payment_provider + "</td>"
+                       + "<td><a href='ViewProfile/" + val._id + "'>" +id2+ "</a></td>"
+                       + "<td>" + val.user_name + "</td>"
+                       + "<td>" + val.full_name + "</td>"
+                       + "<td>" + val.mobile + "</td>"
+                       + "<td>" + val.personal_id + "</td>"
                        + "<td>" + val.status + "</td>"
                        + "</tr>";
                        $('#table_body').append($strRow);
