--- a/eWallet.Backend/eWallet.Backend/Views/Billinginfo/Billing_info.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Billinginfo/Billing_info.cshtml
@@ -1,11 +1,16 @@
 ﻿@{
-    Layout = null;
+    ViewBag.Title = "Billing info";
 }
+<div class="row">
+    <ul class="breadcrumb page-header">
+        <li><a href='@Url.Action("Index","Home",null,null)' class="glyphicons home"><i></i> Home</a></li>
+        <li><a href='#'>@ViewBag.Title</a></li>
+    </ul>
+</div>
 <style>
     .filterable {
         /*margin-top: 15px;*/
-        margin-left:150px;
-        width:1040px;
+        width: 1170px;
     }
 
         .filterable .panel-heading .pull-right {
@@ -46,10 +51,12 @@
                 <thead>
                     <tr class="filters">
                         <th><input id="_id" type="text" class="form-control" placeholder="#" disabled></th>
-                        <th><input id="name" type="text" class="form-control" placeholder="Name" disabled></th>
-                        <th><input id="profile" type="text" class="form-control" placeholder="Profile" disabled></th>
-                        <th><input id="system_created_time" type="text" class="form-control" placeholder="Created Time" disabled></th>
-                        <th><input id="status" type="text" class="form-control" placeholder="Status" disabled></th>
+                        <th><input id="Code" type="text" class="form-control" placeholder="code" disabled></th>
+                        <th><input id="Customer_id" type="text" class="form-control" placeholder="customer_id" disabled></th>
+                        <th><input id="Customer_name" type="text" class="form-control" placeholder="Họ Tên" disabled></th>
+                        <th><input id="Provider" type="text" class="form-control" placeholder="provider" disabled></th>
+                        <th><input id="Service" type="text" class="form-control" placeholder="service" disabled></th>
+                        <th><input id="status" type="text" class="form-control" placeholder="Trạng thái" disabled></th>
                         <th><a href="#" id="SEARCH" class="form-control">Tìm</a></th>
                     </tr>
                 </thead>
@@ -57,11 +64,9 @@
         </div>
     </div>
 </div>
-<center>
-    <table class="table table-striped table-hover " style="width:960px;font-size:14px; text-align:left; margin-left:135px">
-        <tbody id="table_body"></tbody>
-    </table>
-</center>
+<table class="table table-striped table-hover " style="font-size:14px; width:1090px;">
+    <tbody id="table_body"></tbody>
+</table>
 
 <ul class="pagination">
     <li>Prev</li>
@@ -124,66 +129,72 @@
 <script>
     $('#SEARCH').click(function () {
         //alert('Clicked');
-        $name = $('#name').val();
-        $profile = $('#profile').val();
-        $system_created_time = $('#system_created_time').val();
+        $Code = $('#Code').val();
+        $Customer_id = $('#Customer_id').val();
+        $Customer_name = $('#Customer_name').val();
+        $Provider = $('#Provider').val();
+        $Service = $('#Service').val();
         $status = $('#status').val();
-        $_id = $('#_id').val();
+        $_Id = $('#_id').val();
+
         var page;
 
-        $.ajax({
-            url: '@Url.Action("JsonResultFA", "FinanceAccount")',
-            contentType: 'application/json; charset=utf-8',
-            type: 'GET',
-            dataType: 'json',
-            data: { _id: $_id, name: $name, profile: $profile, system_created_time: $system_created_time, status: $status, page: page, page_size: 20 },
-            timeout: 30000
-        })
-           .success(function (result) {
-               if (page == 0) {
-                   $(".pagination").easyPaging(result.total, { // make 1337 elements navigatable
-                       perpage: 20, // show 10 elements per page
-                       lapping: 0, // don't overlap pages for the moment
-                       page: 1, // start at page, can also be "null" or negative
-                       onSelect: function (next_page) {
-                           loadPage(next_page);
-                       }
+            $.ajax({
+                url: '@Url.Action("SearchResultBill", "Billinginfo")',
+                contentType: 'application/json; charset=utf-8',
+                type: 'GET',
+                dataType: 'json',
+                data: { _id: $_Id, code: $Code, customer_id: $Customer_id, customer_name: $Customer_name, provider: $Provider, service : $Service, status: $status, page: page, page_size: 20 },
+                timeout: 30000
+            })
+               .success(function (result) {
+                    if (page == 0) {
+                          $(".pagination").easyPaging(result.total, { // make 1337 elements navigatable
+                           perpage: 20, // show 10 elements per page
+                           lapping: 0, // don't overlap pages for the moment
+                           page: 1, // start at page, can also be "null" or negative
+                           onSelect: function (next_page) {
+                               loadPage(next_page);
+                           }
+                       });
+                   }
+                   $('#table_body').html('');
+                   $.each(result.list, function (i, val) {
+                       //noi chuoi
+                       var x = val._id.toString();
+                       var id2 = x.substring(0, 4) + "x" + x.substring(4);
+                       $strRow = "<tr>"
+                      + "<td><a href='ViewBillinginfo/" + val._id + "'>" + val._id + "</a></td>"
+                       + "<td>" + val.code + "</td>"
+                       + "<td>" + val.customer_id + "</td>"
+                       + "<td>" + val.customer_name + "</td>"
+                       + "<td>" + val.provider + "</td>"
+                       + "<td>" + val.service + "</td>"
+                       + "<td>" + val.status + "</td>"
+                       + "</tr>";
+                       $('#table_body').append($strRow);
                    });
-               }
-               $('#table_body').html('');
-               $.each(result.list, function (i, val) {
-                   $strRow = "<tr>"
-                   + "<td><a href='FinanceAccount/ViewAccount/" + val._id + "'>" + val._id + "</a></td>"
-                   + "<td>" + val.name + "</td>"
-                   + "<td>" + val.profile + "</td>"
-                   + "<td>" + val.system_created_time + "</td>"
-                   + "<td>" + val.status + "</td>"
-                   + "</tr>";
-                   $('#table_body').append($strRow);
+               })
+               .error(function (xhr, status) {
+                   NProgress.done();
+                   alert("Không thể load dữ liệu. Vui lòng thử lại sau!");
                });
-           })
-           .error(function (xhr, status) {
-               NProgress.done();
-               alert("Không thể load dữ liệu. Vui lòng thử lại sau!");
-           });
 
     })
 </script>
-
-
 
 <script>
     $(document).ready(function () {
 
         loadPage(0);
-        
+
         function loadPage(page) {
             $.ajax({
-                url: '@Url.Action("JsonListAccounts", "FinanceAccount")',
+                url: '@Url.Action("ListResultBillinginfo", "Billinginfo")',
                 contentType: 'application/json; charset=utf-8',
                 type: 'GET',
                 dataType: 'json',
-                data: { profile: null, status: '', created_date_from: null, created_date_to: null, page: page, page_size: 20 },
+                data: { id: null, status: '', page: page, page_size: 20 },
                 timeout: 30000
             })
                .success(function (result) {
@@ -200,10 +211,12 @@
                    $('#table_body').html('');
                    $.each(result.list, function (i, val) {
                        $strRow = "<tr>"
-                       + "<td><a href='FinanceAccount/ViewAccount/" + val._id + "'>" + val._id + "</a></td>"
-                       + "<td>" + val.name + "</td>"
-                       + "<td>" + val.profile + "</td>"
-                       + "<td>" + val.system_created_time + "</td>"
+                       + "<td><a href='ViewBillinginfo/" + val._id + "'>" + val._id + "</a></td>"
+                       + "<td>" + val.code + "</td>"
+                       + "<td>" + val.customer_id + "</td>"
+                       + "<td>" + val.customer_name + "</td>"
+                       + "<td>" + val.provider + "</td>"
+                       + "<td>" + val.service+"</td>"
                        + "<td>" + val.status + "</td>"
                        + "</tr>";
                        $('#table_body').append($strRow);
