--- a/eWallet.Backend/eWallet.Backend/Views/Box/Account_ProfileManagement.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/Account_ProfileManagement.cshtml
@@ -40,10 +40,10 @@
                         <label for="confirm-type" class="col-sm-3 control-label">Phân quyền User</label>
                         <div class="col-sm-9">
                             <select id="confirm-type" class="form-control">
-                                <option value="SysCoreAdmin">SysCoreAdmin</option>
-                                <option value="User">User</option>
-                                <option value="GNC">GNC</option>
-                                <option value="CUSTOMER">CUSTOMER</option>
+                                <option value="SYSTEM">SYSTEMR USERS</option>
+                                <option value="MERCHANT">MERCHANT USERS</option>
+                                <option value="GNC">GNC USERS</option>
+                                <option value="CUSTOMER">CUSTOMER USERS</option>
                             </select>
                         </div>
                     </div>
@@ -72,8 +72,8 @@
                         <label for="confirm-type" class="col-sm-3 control-label">Khóa User</label>
                         <div class="col-sm-9">
                             <select id="confirm-type2" class="form-control">
-                                <option value="unlock">Mở Khóa</option>
-                                <option value="lock">Khóa</option>
+                                <option value="ACTIVED">Mở Khóa</option>
+                                <option value="LOCKED">Khóa</option>
                             </select>
                         </div>
                     </div>
