--- a/eWallet.Backend/eWallet.Backend/Views/Account/Register.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Account/Register.cshtml
@@ -18,9 +18,9 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Mobile, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Mobile, new { @class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", onkeypress = "return kaka(event, this)" })
             @Html.ValidationMessageFor(m => m.Mobile)
         </div>
     </div>
@@ -46,3 +46,13 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+@*kiểm tra kiểu số khi nhập*@
+<script language="javascript">
+    function kaka(e, kakatexto) {
+        if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
+            return false;
+        }
+    }
+</script>
+
