--- a/eWallet.Backend/eWallet.Backend/Views/Shared/_Layout.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Shared/_Layout.cshtml
@@ -25,50 +25,54 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Customer Profile", "CustomerProfile_ListProfile", "Profile")</li>
-                    <li>@Html.ActionLink("Billing info", "Billing_info", "Billinginfo")</li>
-                    @*<li>@Html.ActionLink("Finance Accounts", "Index", "FinanceAccount")</li>*@
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Finance Accounts<span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink("List Account", "FinanceAccount_ListAccounts", "FinanceAccount")</li>
-                            <li>@Html.ActionLink("List Account Transaction", "FinanceAccount_ListTransactions", "FinanceAccount")</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Operation <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink("CashOut Request", "CashOutRequest", "Operation")</li>
-                            <li>@Html.ActionLink("CashIn Request", "CashInRequest", "Operation")</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Business Transactions <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink("Today Transaction", "Today", "Transaction")</li>
-                            <li>@Html.ActionLink("Search Transaction", "Search", "Transaction")</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">System <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href='@Url.Action("Setting","FinanceAccount")'>Finance Account</a></li>
-                            @if (User.IsInRole("SysCoreAdmin"))
-                            {
-                                <li><a href='@Url.Action("Setting","Account")'>System Users</a></li>
-                            }
-                            <li class="divider"></li>
-                            <li><a href="#">Service Configruation</a></li>
-                            @if (User.IsInRole("SysCoreAdmin"))
-                            {
-                                <li><a href='@Url.Action("Setting","System")'>System Configuration</a></li>
-                            }
-                            <li class="divider"></li>
-                            <li><a href="#">Log</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                @if (User.IsInRole("CUSTOMER") || User.IsInRole("SYSTEM") || User.IsInRole("GNC") || User.IsInRole("MERCHANT"))
+                {
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Customer Profile", "CustomerProfile_ListProfile", "Profile")</li>
+                        <li>@Html.ActionLink("Billing info", "Billing_info", "Billinginfo")</li>
+                        @*<li>@Html.ActionLink("Finance Accounts", "Index", "FinanceAccount")</li>*@
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Finance Accounts<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink("List Account", "FinanceAccount_ListAccounts", "FinanceAccount")</li>
+                                <li>@Html.ActionLink("List Account Transaction", "FinanceAccount_ListTransactions", "FinanceAccount")</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Operation <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink("CashOut Request", "CashOutRequest", "Operation")</li>
+                                <li>@Html.ActionLink("CashIn Request", "CashInRequest", "Operation")</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Business Transactions <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink("Today Transaction", "Today", "Transaction")</li>
+                                <li>@Html.ActionLink("Search Transaction", "Search", "Transaction")</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">System <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href='@Url.Action("Setting","FinanceAccount")'>Finance Account</a></li>
+                                @if (User.IsInRole("SYSTEM"))
+                                {
+                                    <li><a href='@Url.Action("Setting","Account")'>System Users</a></li>
+                                }
+                                <li class="divider"></li>
+                                <li><a href="#">Service Configruation</a></li>
+                                @if (User.IsInRole("SYSTEM"))
+                                {
+                                    <li><a href='@Url.Action("Setting","System")'>System Configuration</a></li>
+                                }
+                                <li class="divider"></li>
+                                <li><a href="#">Log</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                }
+                
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
