fix check register, update password

--- a/eWallet.Backend/eWallet.Backend/Views/Account/_ChangePasswordPartial.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Account/_ChangePasswordPartial.cshtml
@@ -34,3 +34,10 @@
         </div>
     </div>
 }
+
+@if (null != TempData["alertMessage"])
+{
+    <script type="text/javascript" charset="utf-8">
+               alert('@TempData["alertMessage"]');
+    </script>
+}
