--- a/eWallet.Backend/eWallet.Backend/Views/FinanceAccount/FinanceAccount_ListAccounts.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/FinanceAccount/FinanceAccount_ListAccounts.cshtml
@@ -11,6 +11,7 @@
     .filterable {
         /*margin-top: 15px;*/
       width: 1170px;
+      border:none;
     }
 
         .filterable .panel-heading .pull-right {
@@ -28,7 +29,7 @@
 
             .filterable .filters input[disabled]::-webkit-input-placeholder {
                 color: #333;
-                text-align:center;
+                text-align:left;
             }
 
             .filterable .filters input[disabled]::-moz-placeholder {
@@ -43,7 +44,7 @@
     <div class="row">
         <div class="panel panel-primary filterable">
             <div class="panel-heading">
-                <h3 class="panel-title">Users</h3>
+                <h3 class="panel-title">List Accounts</h3>
                 <div class="pull-right">
                     <button class="btn btn-default btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
                 </div>
@@ -56,16 +57,17 @@
                         <th><input id="profile" type="text" class="form-control" placeholder="Profile" disabled></th>
                         <th><input id="system_created_time" type="text" class="form-control" placeholder="Created Time" disabled></th>
                         <th><input id="status" type="text" class="form-control" placeholder="Status" disabled></th>
-                        <th><a href="#" id="SEARCH" class="form-control">Tìm</a></th>
+                        @*<th><a href="#" id="SEARCH" class="form-control">Tìm</a></th>*@
                     </tr>
                 </thead>
+                <tbody id="table_body" style="text-align:left"></tbody>
             </table>
         </div>
     </div>
 </div>
-    <table class="table table-striped table-hover " style="width:1090px;font-size:14px; text-align:left;">
-        <tbody id="table_body"></tbody>
-    </table>
+    @*<table class="table table-striped table-hover " style="width:1090px;font-size:14px; text-align:left;">
+        
+    </table>*@
 <ul class="pagination">
     <li>Prev</li>
     <li>Page #n</li>
@@ -117,7 +119,7 @@
             $filteredRows.hide();
             /* Prepend no-result row if all rows are filtered */
             if ($filteredRows.length === $rows.length) {
-                $table.find('tbody').prepend($('<tr class="no-result text-center"><td colspan="' + $table.find('.filters th').length + '">No result found</td></tr>'));
+                $table.find('tbody').prepend($('<tr class="no-result text-center"><td colspan="' + $table.find('.filters th').length + '">không tìm thấy thử lại nhé ^_^</td></tr>'));
             }
         });
     });
