--- a/eWallet.Backend/eWallet.Backend/Views/Profile/CustomerProfile_ListProfile.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Profile/CustomerProfile_ListProfile.cshtml
@@ -11,6 +11,7 @@
     .filterable {
         /*margin-top: 15px;*/
         width: 1170px;
+        border:none;
     }
 
         .filterable .panel-heading .pull-right {
@@ -28,7 +29,7 @@
 
             .filterable .filters input[disabled]::-webkit-input-placeholder {
                 color: #333;
-                text-align:center;
+                text-align:left;
             }
 
             .filterable .filters input[disabled]::-moz-placeholder {
@@ -43,7 +44,7 @@
     <div class="row">
         <div class="panel panel-primary filterable">
             <div class="panel-heading">
-                <h3 class="panel-title">Users</h3>
+                <h3 class="panel-title">Profile</h3>
                 <div class="pull-right">
                     <button class="btn btn-default btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
                 </div>
@@ -57,16 +58,17 @@
                         <th><input id="mobile" type="text" class="form-control" placeholder="SDT" disabled></th>
                         <th><input id="Personal_Id" type="text" class="form-control" placeholder="Số CMND" disabled></th>
                         <th><input id="status" type="text" class="form-control" placeholder="Trạng thái" disabled></th>
-                        <th><a href="#" id="SEARCH" class="form-control">Tìm</a></th>
+                        @*<th><a href="#" id="SEARCH" class="form-control">Tìm</a></th>*@
                     </tr>
                 </thead>
+                <tbody id="table_body" style="text-align:left"></tbody>
             </table>
         </div>
     </div>
 </div>
-<table class="table table-striped table-hover " style="font-size:14px; width:1090px;">
-    <tbody id="table_body"></tbody>
-</table>
+@*<table class="table table-striped table-hover " style="font-size:14px; width:1090px;">
+    
+</table>*@
 
 <ul class="pagination">
     <li>Prev</li>
@@ -119,7 +121,7 @@
             $filteredRows.hide();
             /* Prepend no-result row if all rows are filtered */
             if ($filteredRows.length === $rows.length) {
-                $table.find('tbody').prepend($('<tr class="no-result text-center"><td colspan="' + $table.find('.filters th').length + '">No result found</td></tr>'));
+                $table.find('tbody').prepend($('<tr class="no-result text-center"><td colspan="' + $table.find('.filters th').length + '">không tìm thấy thử lại nhé ^_^</td></tr>'));
             }
         });
     });
